# deep-face-trafficking

./: .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml
detector/: Dockerfile  pyproject.toml
detector/trafficdetection/: main.py  utils.py
detector/trafficdetection/agents/: namus.py
detector/trafficdetection/criteria/: trafficking.py
detector/trafficdetection/detectors/: asyncpikareader.py  bufferedvideoreader.py
detector/trafficdetection/openers/: base.py  fileopener.py
detector/trafficdetection/processors/: base.py  deepfaceprocessor.py
detector/trafficdetection/publishers/: rabbitmq.py
detector/trafficdetection/readers/: asyncpikareader.py  base.py
detector/trafficdetection/readers/openers/: fileopener.py
detector/trafficdetection/readers/processors/: base.py  deepfaceprocessor.py
streamer/: Dockerfile  go.mod  go.sum  main.go
streamer/connections/: ampq.go  baseconnection.go
streamer/health/: routes.go
streamer/readers/: basereader.go  urlreader.go  webcamreader.go
streamer/registration/: routes.go
streamer/schemas/: registrationrequest.go  registrationresponse.go
streamer/writers/: basewriter.go  filewriter.go  pikawriter.go  structs.go  utils.go
trafficdetection/: main.py  utils.py
trafficdetection/agents/: example.json  generated2.json  namus.py
trafficdetection/criteria/: trafficking.py
trafficdetection/detectors/: asyncpikareader.py  base.py  imagereader.py  pikareader.py
trafficdetection/schemas/: namus.py
