[tool.poetry]
name = "trafficdetection"
version = "0.1.0"
description = ""
authors = ["Alexander Foley <afoley@getsporttrade.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Cython = "^3.0.5"
ultralytics = "^8.0.207"
opencv-python = "^4.8.1.78"
numpy = "^1.26.1"
deepface = "^0.0.79"
tensorflow = "^2.14.0"
tensorflow-macos = "^2.14.0"
black = "^23.11.0"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
