[tool.poetry]
name = "trafficdetection"
version = "0.1.0"
description = ""
authors = ["Alexander Foley <afoley@getsporttrade.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Cython = "^3.0.5"
ultralytics = "^8.0.207"
opencv-python = "^4.8.1.78"
numpy = "^1.26.1"
deepface = "^0.0.79"
tensorflow = "^2.14.0"
tensorflow-macos = [
    { version = "^2.14.0", platform = 'darwin' },
]
black = "^23.11.0"
loguru = "^0.7.2"
###
# PITA
###
# brew install exiv2 boost boost-python3
# export CPLUS_INCLUDE_PATH=/opt/homebrew/Cellar/exiv2/0.27.6/include/:/opt/homebrew/opt/libssh/include/:/opt/homebrew/Cellar/boost/1.82.0_1/include/
# export LDFLAGS="-L/opt/homebrew/Cellar/boost-python3/1.82.0_1/lib -L/opt/homebrew/Cellar/exiv2/0.27.6/lib"
# py3exiv2
pydantic = "^2.5.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
